# experiments

./: .gitignore  README.md  experiments.cabal  inputfile.txt  outputfile.txt  stack.yaml
app/: Main.hs
src/: Lib.hs
