name:                experiments
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/experiments#readme
license:             BSD3
license-file:        LICENSE
author:              Rolf de Jong
maintainer:          rolf@civilsociety010.nl
copyright:           2017 Rolf de Jong
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010

executable experiments-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , experiments
                     , easyplot
  default-language:    Haskell2010

test-suite experiments-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , experiments
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/experiments
